fixed for CHLK-4942 Gradebook: Gradebook activity description overlaps screen

--- a/Chalkable.Web/assets/sass2/4_pages/_announcement-view-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_announcement-view-page.sass
@@ -169,9 +169,10 @@
   .details-container
     .table
       width: 100%
+      table-layout: fixed
 
     .avatar-block-left
-      width: 1px
+      width: 49px
 
   .description
     width: 100%
